// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calcHS4 — snapshots (SPEC §5) > acometida baja (120 kPa) → grupo de presión necesario 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.5166666666666666,
  "criterioK": "une149201",
  "grupoPresionNecesario": true,
  "kEsCriterioExterno": true,
  "normaCriterioK": "método tradicional",
  "porAparato": [
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-lavabo",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5573049646200632,
        "rozamiento_kPa": 6.229219858480253,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "lavabo",
      "tramoId": "d-bano-lavabo",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-inodoro",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5573049646200632,
        "rozamiento_kPa": 6.229219858480253,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-bano-inodoro",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.3,
      "cumple": false,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-banera",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5238844299207295,
        "rozamiento_kPa": 6.095537719682918,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 82.95057785039634,
      "tipo": "banera_ge_140",
      "tramoId": "d-bano-banera",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "bano-bide",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5573049646200632,
        "rozamiento_kPa": 6.229219858480253,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "bide",
      "tramoId": "d-bano-bide",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "aseo-lavabo",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.4774970925859328,
        "rozamiento_kPa": 5.909988370343731,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 83.18251453707032,
      "tipo": "lavabo",
      "tramoId": "d-aseo-lavabo",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "aseo-inodoro",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.4774970925859328,
        "rozamiento_kPa": 5.909988370343731,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 83.18251453707032,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-aseo-inodoro",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "aseo-ducha",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 2.0765873444091816,
        "rozamiento_kPa": 8.306349377636726,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 80.18706327795408,
      "tipo": "ducha",
      "tramoId": "d-aseo-ducha",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "coc-fregadero",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 2.3254395970547113,
        "rozamiento_kPa": 9.301758388218845,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 78.94280201472644,
      "tipo": "fregadero_domestico",
      "tramoId": "d-coc-fregadero",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.15,
      "cumple": false,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "coc-lavavajillas",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 2.020464596303034,
        "rozamiento_kPa": 8.081858385212136,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 80.46767701848482,
      "tipo": "lavavajillas_domestico",
      "tramoId": "d-coc-lavavajillas",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": false,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "fail",
      "id": "coc-lavadora",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.6225534386854248,
        "rozamiento_kPa": 6.490213754741699,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 82.45723280657288,
      "tipo": "lavadora_domestica",
      "tramoId": "d-coc-lavadora",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.3,
      "caudalCalculo_dm3_s": 0.3,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.81976597885342,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-banera",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.300 dm³/s (=0.300×K1.000, n=1) → Ø teórico 13.8 mm → Ø comercial 20 mm · v=0.95 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.69 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.6924782760960948,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.13849565521921897,
        "rozamiento_kPa": 0.5539826208768759,
      },
      "presionResidual_kPa": 82.95057785039634,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.9549296585513718,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-bide",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 82.78347517689967,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.6,
      "caudalCalculo_dm3_s": 0.3464101615137755,
      "childrenIds": [
        "d-bano-lavabo",
        "d-bano-inodoro",
        "d-bano-banera",
        "d-bano-bide",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 14.850304985713825,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-bano",
      "k": 0.5773502691896258,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.346 dm³/s (=0.600×K0.577, n=4) → Ø teórico 14.9 mm → Ø comercial 20 mm · v=1.10 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 1.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 4,
      "parentId": "deriv-particular",
      "perdida_kPa": 1.3360379893233165,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.2672075978646633,
        "rozamiento_kPa": 1.0688303914586532,
      },
      "presionResidual_kPa": 83.64305612649244,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.1026577908435842,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 83.18251453707032,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 83.18251453707032,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-ducha",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 3.855032208709008,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.7710064417418016,
        "rozamiento_kPa": 3.084025766967206,
      },
      "presionResidual_kPa": 80.18706327795408,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.4,
      "caudalCalculo_dm3_s": 0.282842712474619,
      "childrenIds": [
        "d-aseo-lavabo",
        "d-aseo-inodoro",
        "d-aseo-ducha",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 12,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.418765339308278,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-aseo",
      "k": 0.7071067811865475,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.283 dm³/s (=0.400×K0.707, n=3) → Ø teórico 13.4 mm → Ø comercial 20 mm · v=0.90 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.94 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 0.9369986291526654,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.18739972583053308,
        "rozamiento_kPa": 0.7495989033221323,
      },
      "presionResidual_kPa": 84.04209548666309,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.900316316157106,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": true,
      "estado": "ok",
      "id": "d-coc-fregadero",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 3.855032208709008,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.7710064417418016,
        "rozamiento_kPa": 3.084025766967206,
      },
      "presionResidual_kPa": 78.94280201472644,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.15,
      "caudalCalculo_dm3_s": 0.15,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 9.772050238058398,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavavajillas",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.150 dm³/s (=0.150×K1.000, n=1) → Ø teórico 9.8 mm → Ø comercial 12 mm · v=1.33 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.33 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 2.3301572049506225,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.4660314409901245,
        "rozamiento_kPa": 1.864125763960498,
      },
      "presionResidual_kPa": 80.46767701848482,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.3262911924324612,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavadora",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 20 mm · v=0.64 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 0.34060141686257595,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.06812028337251519,
        "rozamiento_kPa": 0.27248113349006076,
      },
      "presionResidual_kPa": 82.45723280657288,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.6366197723675813,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.55,
      "caudalCalculo_dm3_s": 0.38890872965260115,
      "childrenIds": [
        "d-coc-fregadero",
        "d-coc-lavavajillas",
        "d-coc-lavadora",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 15.734897106215985,
      "diametro_mm": 20,
      "esCritico": true,
      "estado": "ok",
      "id": "ramal-cocina",
      "k": 0.7071067811865475,
      "longitud_m": 4,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.389 dm³/s (=0.550×K0.707, n=3) → Ø teórico 15.7 mm → Ø comercial 20 mm · v=1.24 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.18 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 2.181259892380313,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.4362519784760626,
        "rozamiento_kPa": 1.7450079139042505,
      },
      "presionResidual_kPa": 82.79783422343544,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.2379349347160207,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "ramal-bano",
        "ramal-aseo",
        "ramal-cocina",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "deriv-particular",
      "k": 0.3333333333333333,
      "longitud_m": 4,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Derivación particular (vivienda, apartamento, local comercial)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.24 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "montante",
      "perdida_kPa": 1.242423529818719,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.24848470596374378,
        "rozamiento_kPa": 0.9939388238549751,
      },
      "presionResidual_kPa": 84.97909411581576,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 3,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "deriv-particular",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "montante",
      "k": 0.3333333333333333,
      "longitud_m": 6,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Columna (montante o descendente)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 31.29 kPa (long.+25% local.+cota 3 m; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "alimentacion",
      "perdida_kPa": 31.293635294728077,
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 0.37272705894561564,
        "rozamiento_kPa": 1.4909082357824626,
      },
      "presionResidual_kPa": 86.22151764563448,
      "tipo": "columna_montante",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "montante",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "alimentacion",
      "k": 0.3333333333333333,
      "longitud_m": 5,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.55 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "acometida",
      "perdida_kPa": 1.5530294122733987,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.31060588245467974,
        "rozamiento_kPa": 1.242423529818719,
      },
      "presionResidual_kPa": 117.51515294036255,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "acometida",
      "k": 0.3333333333333333,
      "longitud_m": 3,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 0.93 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": null,
      "perdida_kPa": 0.9318176473640392,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.18636352947280782,
        "rozamiento_kPa": 0.7454541178912313,
      },
      "presionResidual_kPa": 119.06818235263596,
      "tipo": "acometida",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
  ],
  "presionAcometida_kPa": 120,
  "presionCritica_kPa": 78.94280201472644,
  "presionNecesaria_kPa": 141.05719798527355,
  "puntoCriticoId": "coc-fregadero",
  "veredictoGlobal": "fail",
  "warnings": [
    "Coeficiente de simultaneidad K = 1/√(n−1): criterio de proyecto (método tradicional), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado", ap. 4.2.1 pto 2 b).",
    "Punto de consumo "bano-lavabo": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-inodoro": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-banera": presión residual 83.0 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-bide": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-lavabo": presión residual 83.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-inodoro": presión residual 83.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-ducha": presión residual 80.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-fregadero": presión residual 78.9 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-lavavajillas": presión residual 80.5 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-lavadora": presión residual 82.5 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Grupo de presión NECESARIO (ap. 4.2.2 pto 1 b): el punto de peor margen "coc-fregadero" (78.9 kPa) no alcanza su mínima exigida 100 kPa (o algún otro punto de consumo presenta déficit).",
  ],
}
`;

exports[`calcHS4 — snapshots (SPEC §5) > muchos aparatos (24) → K de simultaneidad pequeño 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.5004345937369796,
  "criterioK": "une149201",
  "grupoPresionNecesario": false,
  "kEsCriterioExterno": true,
  "normaCriterioK": "método tradicional",
  "porAparato": [
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-0",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-1",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-2",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-3",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-4",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-5",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-6",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-7",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-8",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-9",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-10",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-11",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-12",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-13",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-14",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-15",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-16",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-17",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-18",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-19",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-20",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-21",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-22",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lav-23",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.9399379729054269,
        "rozamiento_kPa": 3.7597518916217076,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "lavabo",
      "tramoId": "d-lavabos",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "d-lavabos",
      "k": 0.20851441405707477,
      "longitud_m": 2,
      "material": "metalica",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 0.59 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": "ramal",
      "perdida_kPa": 0.5874612330658918,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.11749224661317836,
        "rozamiento_kPa": 0.46996898645271346,
      },
      "presionResidual_kPa": 395.30031013547284,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [
        "d-lavabos",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "ramal",
      "k": 0.20851441405707477,
      "longitud_m": 5,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Derivación particular (vivienda, apartamento, local comercial)) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 1.47 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": "alimentacion",
      "perdida_kPa": 1.4686530826647295,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.2937306165329459,
        "rozamiento_kPa": 1.1749224661317836,
      },
      "presionResidual_kPa": 395.8877713685387,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [
        "ramal",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "alimentacion",
      "k": 0.20851441405707477,
      "longitud_m": 6,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 1.76 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": "acometida",
      "perdida_kPa": 1.7623836991976756,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.3524767398395351,
        "rozamiento_kPa": 1.4099069593581404,
      },
      "presionResidual_kPa": 397.35642445120345,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 2.400000000000001,
      "caudalCalculo_dm3_s": 0.5004345937369796,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.577388942026012,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "acometida",
      "k": 0.20851441405707477,
      "longitud_m": 3,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.500 dm³/s (=2.400×K0.209, n=24) → Ø teórico 22.6 mm → Ø comercial 25 mm · v=1.02 m/s en rango [0.5, 2] (metalica) · pérdida 0.88 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 24,
      "parentId": null,
      "perdida_kPa": 0.8811918495988378,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.17623836991976755,
        "rozamiento_kPa": 0.7049534796790702,
      },
      "presionResidual_kPa": 399.11880815040115,
      "tipo": "acometida",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.0194769828790369,
    },
  ],
  "presionAcometida_kPa": 400,
  "presionCritica_kPa": 395.30031013547284,
  "presionNecesaria_kPa": 104.69968986452716,
  "puntoCriticoId": "lav-0",
  "veredictoGlobal": "ok",
  "warnings": [
    "Tramo "d-lavabos" (derivación de aparato): 24 aparatos sobre la misma derivación; la Tabla 4.2 es por derivación INDIVIDUAL (revisar Ø por aparato).",
    "Coeficiente de simultaneidad K = 1/√(n−1): criterio de proyecto (método tradicional), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado", ap. 4.2.1 pto 2 b).",
  ],
}
`;

exports[`calcHS4 — snapshots (SPEC §5) > un solo aparato (K = 1, la fórmula UNE 149201 no aplica) 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.1,
  "criterioK": "une149201",
  "grupoPresionNecesario": false,
  "kEsCriterioExterno": true,
  "normaCriterioK": "método tradicional",
  "porAparato": [
    {
      "altura_m": 0,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "lavabo",
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.2537810817614814,
        "rozamiento_kPa": 1.0151243270459256,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 298.7310945911926,
      "tipo": "lavabo",
      "tramoId": "d-lavabo",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": true,
      "estado": "ok",
      "id": "d-lavabo",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 1.15 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "alimentacion",
      "perdida_kPa": 1.1461079327903518,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.22922158655807037,
        "rozamiento_kPa": 0.9168863462322815,
      },
      "presionResidual_kPa": 298.7310945911926,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [
        "d-lavabo",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 12,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "warn",
      "id": "alimentacion",
      "k": 1,
      "longitud_m": 4,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 25 mm · v=0.20 m/s fuera del rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.07 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "acometida",
      "perdida_kPa": 0.07016998629546004,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.014033997259092008,
        "rozamiento_kPa": 0.05613598903636803,
      },
      "presionResidual_kPa": 299.87720252398293,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": true,
      "velocidad_m_s": 0.20371832715762603,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "warn",
      "id": "acometida",
      "k": 1,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 25 mm · v=0.20 m/s fuera del rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.05 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": null,
      "perdida_kPa": 0.05262748972159503,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.010525497944319007,
        "rozamiento_kPa": 0.04210199177727603,
      },
      "presionResidual_kPa": 299.9473725102784,
      "tipo": "acometida",
      "velocidadFueraDeRango": true,
      "velocidad_m_s": 0.20371832715762603,
    },
  ],
  "presionAcometida_kPa": 300,
  "presionCritica_kPa": 298.7310945911926,
  "presionNecesaria_kPa": 101.26890540880743,
  "puntoCriticoId": "lavabo",
  "veredictoGlobal": "warn",
  "warnings": [
    "Coeficiente de simultaneidad K = 1/√(n−1): criterio de proyecto (método tradicional), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado", ap. 4.2.1 pto 2 b).",
    "Velocidad 0.20 m/s fuera del intervalo de cálculo DB-HS4 ap. 4.2.1 pto 2 d) (tramo "alimentacion", termoplastico_multicapa: por debajo del mínimo 0.5 m/s); paso de dimensionado, no exigencia de cumplimiento.",
    "Velocidad 0.20 m/s fuera del intervalo de cálculo DB-HS4 ap. 4.2.1 pto 2 d) (tramo "acometida", termoplastico_multicapa: por debajo del mínimo 0.5 m/s); paso de dimensionado, no exigencia de cumplimiento.",
  ],
}
`;

exports[`calcHS4 — snapshots (SPEC §5) > vivienda realista (defaults, acometida 250 kPa → CUMPLE) 1`] = `
{
  "arbolValido": true,
  "caudalTotal_dm3_s": 0.5166666666666666,
  "criterioK": "une149201",
  "grupoPresionNecesario": false,
  "kEsCriterioExterno": true,
  "normaCriterioK": "método tradicional",
  "porAparato": [
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-lavabo",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5573049646200632,
        "rozamiento_kPa": 6.229219858480253,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "lavabo",
      "tramoId": "d-bano-lavabo",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-inodoro",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5573049646200632,
        "rozamiento_kPa": 6.229219858480253,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-bano-inodoro",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.3,
      "cumple": true,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-banera",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5238844299207295,
        "rozamiento_kPa": 6.095537719682918,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 212.95057785039634,
      "tipo": "banera_ge_140",
      "tramoId": "d-bano-banera",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "bano-bide",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.5573049646200632,
        "rozamiento_kPa": 6.229219858480253,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "bide",
      "tramoId": "d-bano-bide",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "aseo-lavabo",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.4774970925859328,
        "rozamiento_kPa": 5.909988370343731,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 213.18251453707035,
      "tipo": "lavabo",
      "tramoId": "d-aseo-lavabo",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.1,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "aseo-inodoro",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.4774970925859328,
        "rozamiento_kPa": 5.909988370343731,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 213.18251453707035,
      "tipo": "inodoro_cisterna",
      "tramoId": "d-aseo-inodoro",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "aseo-ducha",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 2.0765873444091816,
        "rozamiento_kPa": 8.306349377636726,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 210.18706327795408,
      "tipo": "ducha",
      "tramoId": "d-aseo-ducha",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "coc-fregadero",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 2.3254395970547113,
        "rozamiento_kPa": 9.301758388218845,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 208.94280201472642,
      "tipo": "fregadero_domestico",
      "tramoId": "d-coc-fregadero",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.15,
      "cumple": true,
      "diametroMinDerivacion_mm": 12,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "coc-lavavajillas",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 2.020464596303034,
        "rozamiento_kPa": 8.081858385212136,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 210.46767701848484,
      "tipo": "lavavajillas_domestico",
      "tramoId": "d-coc-lavavajillas",
    },
    {
      "altura_m": 3,
      "caudalInstantaneo_dm3_s": 0.2,
      "cumple": true,
      "diametroMinDerivacion_mm": 20,
      "esFluxorOCalentador": false,
      "estado": "ok",
      "id": "coc-lavadora",
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 1.6225534386854248,
        "rozamiento_kPa": 6.490213754741699,
      },
      "presionMinExigida_kPa": 100,
      "presionResidual_kPa": 212.45723280657288,
      "tipo": "lavadora_domestica",
      "tramoId": "d-coc-lavadora",
    },
  ],
  "porTramo": [
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.3,
      "caudalCalculo_dm3_s": 0.3,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.81976597885342,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-banera",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.300 dm³/s (=0.300×K1.000, n=1) → Ø teórico 13.8 mm → Ø comercial 20 mm · v=0.95 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.69 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.6924782760960948,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.13849565521921897,
        "rozamiento_kPa": 0.5539826208768759,
      },
      "presionResidual_kPa": 212.95057785039634,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.9549296585513718,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-bano-bide",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-bano",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 212.78347517689969,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.6,
      "caudalCalculo_dm3_s": 0.3464101615137755,
      "childrenIds": [
        "d-bano-lavabo",
        "d-bano-inodoro",
        "d-bano-banera",
        "d-bano-bide",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 14.850304985713825,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-bano",
      "k": 0.5773502691896258,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.346 dm³/s (=0.600×K0.577, n=4) → Ø teórico 14.9 mm → Ø comercial 20 mm · v=1.10 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 1.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 4,
      "parentId": "deriv-particular",
      "perdida_kPa": 1.3360379893233165,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.2672075978646633,
        "rozamiento_kPa": 1.0688303914586532,
      },
      "presionResidual_kPa": 213.64305612649244,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.1026577908435842,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-lavabo",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 213.18251453707035,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.1,
      "caudalCalculo_dm3_s": 0.1,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 7.978845608028654,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-inodoro",
      "k": 1,
      "longitud_m": 1.5,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.100 dm³/s (=0.100×K1.000, n=1) → Ø teórico 8.0 mm → Ø comercial 12 mm · v=0.88 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 0.859580949592764,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.1719161899185528,
        "rozamiento_kPa": 0.6876647596742111,
      },
      "presionResidual_kPa": 213.18251453707035,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.8841941282883076,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-aseo-ducha",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-aseo",
      "perdida_kPa": 3.855032208709008,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.7710064417418016,
        "rozamiento_kPa": 3.084025766967206,
      },
      "presionResidual_kPa": 210.18706327795408,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.4,
      "caudalCalculo_dm3_s": 0.282842712474619,
      "childrenIds": [
        "d-aseo-lavabo",
        "d-aseo-inodoro",
        "d-aseo-ducha",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 12,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 13.418765339308278,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "ramal-aseo",
      "k": 0.7071067811865475,
      "longitud_m": 3,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.283 dm³/s (=0.400×K0.707, n=3) → Ø teórico 13.4 mm → Ø comercial 20 mm · v=0.90 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.94 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 0.9369986291526654,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.18739972583053308,
        "rozamiento_kPa": 0.7495989033221323,
      },
      "presionResidual_kPa": 214.0420954866631,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.900316316157106,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 12,
      "esCritico": true,
      "estado": "ok",
      "id": "d-coc-fregadero",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 12 mm · v=1.77 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 3.86 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 3.855032208709008,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.7710064417418016,
        "rozamiento_kPa": 3.084025766967206,
      },
      "presionResidual_kPa": 208.94280201472642,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.7683882565766151,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.15,
      "caudalCalculo_dm3_s": 0.15,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 12,
      "diametroTeorico_mm": 9.772050238058398,
      "diametro_mm": 12,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavavajillas",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 12 mm (Tabla 4.2) · Q_cálc=0.150 dm³/s (=0.150×K1.000, n=1) → Ø teórico 9.8 mm → Ø comercial 12 mm · v=1.33 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.33 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 2.3301572049506225,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.4660314409901245,
        "rozamiento_kPa": 1.864125763960498,
      },
      "presionResidual_kPa": 210.46767701848484,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.3262911924324612,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.2,
      "caudalCalculo_dm3_s": 0.2,
      "childrenIds": [],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 0,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 11.283791670955127,
      "diametro_mm": 20,
      "esCritico": false,
      "estado": "ok",
      "id": "d-coc-lavadora",
      "k": 1,
      "longitud_m": 2,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.2) · Q_cálc=0.200 dm³/s (=0.200×K1.000, n=1) → Ø teórico 11.3 mm → Ø comercial 20 mm · v=0.64 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 0.34 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 1,
      "parentId": "ramal-cocina",
      "perdida_kPa": 0.34060141686257595,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.06812028337251519,
        "rozamiento_kPa": 0.27248113349006076,
      },
      "presionResidual_kPa": 212.45723280657288,
      "tipo": "derivacion_aparato",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 0.6366197723675813,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 0.55,
      "caudalCalculo_dm3_s": 0.38890872965260115,
      "childrenIds": [
        "d-coc-fregadero",
        "d-coc-lavavajillas",
        "d-coc-lavadora",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 15.734897106215985,
      "diametro_mm": 20,
      "esCritico": true,
      "estado": "ok",
      "id": "ramal-cocina",
      "k": 0.7071067811865475,
      "longitud_m": 4,
      "material": "termoplastico_multicapa",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Cuarto húmedo privado (baño/aseo/cocina)) · Q_cálc=0.389 dm³/s (=0.550×K0.707, n=3) → Ø teórico 15.7 mm → Ø comercial 20 mm · v=1.24 m/s en rango [0.5, 3.5] (termoplastico_multicapa) · pérdida 2.18 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 3,
      "parentId": "deriv-particular",
      "perdida_kPa": 2.181259892380313,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.4362519784760626,
        "rozamiento_kPa": 1.7450079139042505,
      },
      "presionResidual_kPa": 212.79783422343544,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.2379349347160207,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "ramal-bano",
        "ramal-aseo",
        "ramal-cocina",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 20,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "deriv-particular",
      "k": 0.3333333333333333,
      "longitud_m": 4,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Derivación particular (vivienda, apartamento, local comercial)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.24 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "montante",
      "perdida_kPa": 1.242423529818719,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.24848470596374378,
        "rozamiento_kPa": 0.9939388238549751,
      },
      "presionResidual_kPa": 214.97909411581577,
      "tipo": "derivacion_particular",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 3,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "deriv-particular",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 20,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "montante",
      "k": 0.3333333333333333,
      "longitud_m": 6,
      "material": "metalica",
      "motivo": "Ø mín. 20 mm (Tabla 4.3 · Columna (montante o descendente)) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 31.29 kPa (long.+25% local.+cota 3 m; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "alimentacion",
      "perdida_kPa": 31.293635294728077,
      "perdidas": {
        "altura_kPa": 29.43,
        "localizadas_kPa": 0.37272705894561564,
        "rozamiento_kPa": 1.4909082357824626,
      },
      "presionResidual_kPa": 216.2215176456345,
      "tipo": "columna_montante",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "montante",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "alimentacion",
      "k": 0.3333333333333333,
      "longitud_m": 5,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 1.55 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": "acometida",
      "perdida_kPa": 1.5530294122733987,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.31060588245467974,
        "rozamiento_kPa": 1.242423529818719,
      },
      "presionResidual_kPa": 247.51515294036258,
      "tipo": "tubo_alimentacion",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
    {
      "altura_m": 0,
      "caudalAcumulado_dm3_s": 1.55,
      "caudalCalculo_dm3_s": 0.5166666666666666,
      "childrenIds": [
        "alimentacion",
      ],
      "cumple": true,
      "diametroFueraDeSerie": false,
      "diametroMinPorAguasArriba_mm": 25,
      "diametroMinPorTabla_mm": 25,
      "diametroTeorico_mm": 22.94062652059007,
      "diametro_mm": 25,
      "esCritico": true,
      "estado": "ok",
      "id": "acometida",
      "k": 0.3333333333333333,
      "longitud_m": 3,
      "material": "metalica",
      "motivo": "Ø mín. 25 mm (Tabla 4.3 · Distribuidor principal) · Q_cálc=0.517 dm³/s (=1.550×K0.333, n=10) → Ø teórico 22.9 mm → Ø comercial 25 mm · v=1.05 m/s en rango [0.5, 2] (metalica) · pérdida 0.93 kPa (long.+25% local.; modelo predimensionado).",
      "numAparatos": 10,
      "parentId": null,
      "perdida_kPa": 0.9318176473640392,
      "perdidas": {
        "altura_kPa": 0,
        "localizadas_kPa": 0.18636352947280782,
        "rozamiento_kPa": 0.7454541178912313,
      },
      "presionResidual_kPa": 249.06818235263597,
      "tipo": "acometida",
      "velocidadFueraDeRango": false,
      "velocidad_m_s": 1.052544690314401,
    },
  ],
  "presionAcometida_kPa": 250,
  "presionCritica_kPa": 208.94280201472642,
  "presionNecesaria_kPa": 141.05719798527358,
  "puntoCriticoId": "coc-fregadero",
  "veredictoGlobal": "ok",
  "warnings": [
    "Coeficiente de simultaneidad K = 1/√(n−1): criterio de proyecto (método tradicional), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado", ap. 4.2.1 pto 2 b).",
  ],
}
`;
